--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,8 +2,7 @@
   margin: 0
   padding: 0
   box-sizing: border-box
-  font-family: 'Poppins', sans-serif
-  overflow-x: hidden
+  font-family: 'Poppins', 'Archivo', sans-serif
 
 *
   @include reset-box-model
