Adicionando lógica ao componente de navegação. Implementando lógica para abrir/fechar o menu dropdown ao clicar no botão de toggle. Adiciona media queries para tornar o  menu responsivo em dispositivos móveis.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,25 @@
 <nav>
-  <a href="#">Início</a>
-  <a href="#">Sobre Mim</a>
-  <a href="#">Tecnologias</a>
-  <a href="#">Projetos</a>
-  <a href="#">Certificados</a>
-  <a href="#">Fale Comigo</a>
-  <span></span>
+  <div class="links">
+    <a href="#">Início</a>
+    <a href="#">Sobre Mim</a>
+    <a href="#">Tecnologias</a>
+    <a href="#">Projetos</a>
+    <a href="#">Certificados</a>
+    <a href="#">Fale Comigo</a>
+    <span></span>
+  </div>
+
+  <div class="toggle_btn">
+    <i class="fa-solid fa-bars"></i>
+  </div>
+
+  <div class="dropdown_menu">
+    <a href="#">Início</a>
+    <a href="#">Sobre Mim</a>
+    <a href="#">Tecnologias</a>
+    <a href="#">Projetos</a>
+    <a href="#">Certificados</a>
+    <a href="#">Fale Comigo</a>
+    <span></span>
+  </div>
 </nav>
