--- a/src/app/components/navbar/navbar.component.sass
+++ b/src/app/components/navbar/navbar.component.sass
@@ -27,6 +27,39 @@ nav
         background: #ed6022
         border-radius: 8px
         transition: .5s ease
+    
+    .toggle_btn
+      position: absolute
+      display: none
+      width: 50px
+      height: 50px
+      right: 15%
+      color: #fff
+      cursor: pointer
+      font-size: 24px
+      border-radius: 50%
+      background: #ed6022
+
+    .dropdown_menu
+      position: relative
+      display: none
+      top: 267px
+      height: 0
+      width: 1000%
+      background-color: rgba(0,0,0,0.65)
+      z-index: -1
+      backdrop-filter: blur(10px)
+      overflow: hidden
+      transition: height .2s cubic-bezier(0.175, 0.885, 0.32, 1.275)
+
+      a
+        display: flex
+        align-items: center
+        justify-content: center
+        margin-top: 55px
+
+    .dropdown_menu.open
+      height: 1000%
 
 nav a:nth-child(1):hover ~ span
   width: 100px
@@ -51,3 +84,24 @@ nav a:nth-child(5):hover ~ span
 nav a:nth-child(6):hover ~ span
   width: 155px
   left: 626px
+
+@media(max-width: 992px)
+  nav
+    width: 100%
+    background: none
+
+  nav .links
+    display: none
+
+  nav .toggle_btn
+    display: block
+    text-align: center
+    padding: 12.5px 10px 10px 10px
+
+  nav .dropdown_menu
+    display: block
+
+    span
+      display: none 
+
+
