:lipstick: feat: Estilização no SASS do navbar e header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,14 +1,8 @@
-<section class="s_header">
-  <div class="container_text">
-    <h1>
-      <span class="hola">Olá! eu me chamo</span>
-      <span class="my_name">KELVEN WYLLAMES</span>
-      <span class="typewriter"
-        >{{ typewriter }} <span class="typing_bar">|</span></span
-      >
-    </h1>
-  </div>
-  <div class="photo_programming">
-    <img src="assets/programmer-writing-code-on-laptop.png" alt="" />
-  </div>
+<section class="s-header">
+  <h1>
+    <span>Olá, me chamo</span>
+    <span>Kelven Wyllames</span>
+    <span>Desenvolvedor Front-End</span>
+  </h1>
+  <img src="assets/programmer-writing-code-on-laptop.png" alt="" />
 </section>
