--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <nav>
+  <h2>Kelven</h2>
   <div class="links">
     <a href="#">Início</a>
     <a href="#">Sobre Mim</a>
@@ -6,20 +7,22 @@
     <a href="#">Projetos</a>
     <a href="#">Certificados</a>
     <a href="#">Fale Comigo</a>
-    <span></span>
+  </div>
+  <div class="social">
+    <a href=""><i class="fa-brands fa-github"></i></a>
+    <a href=""><i class="fa-brands fa-instagram"></i></a>
   </div>
 
   <div class="toggle_btn">
     <i class="fa-solid fa-bars"></i>
   </div>
 
-  <div class="dropdown_menu">
+  <div class="dropdown_menu open">
     <a href="#">Início</a>
     <a href="#">Sobre Mim</a>
     <a href="#">Tecnologias</a>
     <a href="#">Projetos</a>
     <a href="#">Certificados</a>
     <a href="#">Fale Comigo</a>
-    <span></span>
   </div>
 </nav>
