Implementando componentes SectionTitle e About:
Adicionando o componente SectionTitle em shared/components para padronizar títulos em todas as seções.
Criando o componente About para exibir informações sobre o usuário.

--- a/src/app/components/header/header.component.sass
+++ b/src/app/components/header/header.component.sass
@@ -1,10 +1,10 @@
 .s-header
     width: 100%
-    height: 864px
+    height: 624px
     display: flex
     justify-content: center
     align-items: center
-    gap: 1rem
+    gap: 2rem
 
     h1
         display: flex
@@ -16,6 +16,10 @@
             font-weight: 400
         
         :nth-child(2)
+            background: linear-gradient(180deg, #FF6D00 0%, #E64A19 100%)
+            background-clip: text
+            -webkit-background-clip: text
+            -webkit-text-fill-color: transparent
             font-size: 4.5rem
             font-weight: 800
 
@@ -48,6 +52,7 @@
 
 @media (max-width: 992px)
     .s-header
+        margin-top: 10rem
         flex-direction: column
 
 @media (max-width: 576px)
