--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <h1>
     <span>Olá, me chamo</span>
     <span>Kelven Wyllames</span>
-    <span>Desenvolvedor Front-End</span>
+    <span>{{ typewriter }}</span>
   </h1>
   <img src="assets/programmer-writing-code-on-laptop.png" alt="" />
 </section>
