--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,50 +1,69 @@
-<section class="s-about-me">
-  <img src="assets/profile.png.png" alt="" />
-  <div class="right-about">
-    <app-section-title
-      numberPage="01."
-      titlePage="Sobre Mim"
-    ></app-section-title>
-    <p>
-      Olá, meu nome é Kelven Wyllames, tenho 24 anos. Sou um jovem apaixonado
-      por desafios e em constante busca por novos conhecimentos. Atualmente
-      minha stack atual abrange tecnologias e ferramentas como HTML5, CSS3,
-      JavaScript, Angular, TypeScript, Git, GitHub e Figma. Além disso, estou
-      imerso em estudos contínuos, aprimorando-me em SASS, Bootstrap e Java para
-      ampliar ainda mais minhas habilidades e abordar desafios mais complexos.
-      Estou entusiasmado em contribuir para a comunidade de desenvolvedores e em
-      enfrentar os desafios emocionantes que o mundo da programação oferece.
-    </p>
-    <div class="social-flex-profile">
-      <div class="bg-social-profile">
-        <a
-          href="http://instagram.com/kelvenwyllames/"
-          target="_blank"
-          class="instagram"
-        >
-          <i class="icon fa-brands fa-instagram"></i>
-        </a>
-      </div>
+<section class="s-about">
+  <div class="container-about">
+    <img src="assets/profile.png.png" alt="" />
+    <div class="right-about">
+      <app-section-title
+        numberPage="01."
+        titlePage="Sobre Mim"
+      ></app-section-title>
+      <p>
+        Olá, meu nome é Kelven Wyllames, tenho 24 anos. Sou um jovem apaixonado
+        por desafios e em constante busca por novos conhecimentos. Atualmente
+        minha stack atual abrange tecnologias e ferramentas como HTML5, CSS3,
+        JavaScript, Angular, TypeScript, Git, GitHub e Figma. Além disso, estou
+        imerso em estudos contínuos, aprimorando-me em SASS, Bootstrap e Java
+        para ampliar ainda mais minhas habilidades e abordar desafios mais
+        complexos. Estou entusiasmado em contribuir para a comunidade de
+        desenvolvedores e em enfrentar os desafios emocionantes que o mundo da
+        programação oferece.
+      </p>
+      <div class="social-flex-profile">
+        <div class="bg-social-profile">
+          <a
+            href="http://instagram.com/kelvenwyllames/"
+            target="_blank"
+            class="instagram"
+          >
+            <i class="icon fa-brands fa-instagram"></i>
+          </a>
+        </div>
 
-      <div class="bg-social-profile">
-        <a
-          href="http://github.com/kelvenwyllames"
-          target="_blank"
-          class="github"
-        >
-          <i class="icon fa-brands fa-github"></i>
-        </a>
-      </div>
+        <div class="bg-social-profile">
+          <a
+            href="http://github.com/kelvenwyllames"
+            target="_blank"
+            class="github"
+          >
+            <i class="icon fa-brands fa-github"></i>
+          </a>
+        </div>
 
-      <div class="bg-social-profile">
-        <a
-          href="https://www.linkedin.com/in/kelvenwyllames/"
-          target="_blank"
-          class="linkedin"
-        >
-          <i class="icon fa-brands fa-linkedin-in"></i>
-        </a>
+        <div class="bg-social-profile">
+          <a
+            href="https://www.linkedin.com/in/kelvenwyllames/"
+            target="_blank"
+            class="linkedin"
+          >
+            <i class="icon fa-brands fa-linkedin-in"></i>
+          </a>
+        </div>
       </div>
+    </div>
+  </div>
+  <div class="container-habilidades">
+    <app-skills></app-skills>
+    <div class="img-skills">
+      <img src="assets/html.svg" alt="html5" />
+      <img src="assets/css.png" alt="css3" />
+      <img src="assets/javascript.svg" alt="javascript" />
+      <img src="assets/sass.svg" alt="sass" />
+      <img src="assets/tailwind.png" alt="talwind" />
+      <img src="assets/angular.svg" alt="angular" />
+      <img src="assets/typescript.svg" alt="typescript" />
+      <img src="assets/java.svg" alt="java" />
+      <img src="assets/github.svg" alt="github" />
+      <img src="assets/git.svg" alt="git" />
+      <img src="assets/figma.svg" alt="figma" />
     </div>
   </div>
 </section>
