Concluída a seção de Projetos e Certificados
- Adicionada lógica para carregar mais projetos de forma assíncrona.
- Aprimoradando responsividade para diferentes tamanhos de tela.
- Introduzidas variáveis SASS para melhor organização do código.

--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -51,7 +51,10 @@
     </div>
   </div>
   <div class="container-habilidades">
-    <app-skills></app-skills>
+    <app-section-title
+      numberPage="02."
+      titlePage="Habilidades"
+    ></app-section-title>
     <div class="img-skills">
       <img src="assets/html.svg" alt="html5" />
       <img src="assets/css.png" alt="css3" />
