--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -35,4 +35,47 @@
     </ul>
     <button type="button" (click)="loadMoreProjects()">Carregar Mais</button>
   </section>
+  <section class="s-certificates">
+    <div class="section-title-projects">
+      <app-section-title
+        numberPage="04."
+        titlePage="Certificados"
+      ></app-section-title>
+    </div>
+
+    <app-certificates
+      certificatesimg="https://hermes.digitalinnovation.one/certificates/cover/1DFF4A07.jpg"
+      certificatesalt="Santander Bootcamp 2023 - Fullstack Java+Angular"
+      certificatestitle="Santander Bootcamp 2023 - Fullstack Java+Angular"
+      certifiicatesdescription="Participei do bootcamp Full Stack Java + Angular na Digital Innovation One (DIO) com duração de 115 horas foi uma jornada intensa que aprimorou minhas habilidades em desenvolvimento web e Full Stack. Durante o programa, tive a oportunidade de me aprofundar em diversas áreas."
+      certificatesskillsimg1="assets\html.svg"
+      certificatesskillsalt1="html5"
+      certificatesskillsimg2="assets\css.png"
+      certificatesskillsalt2="css3"
+      certificatesskillsimg3="assets\javascript.svg"
+      certificatesskillsalt3="javascript"
+      certificatesskillsimg4=""
+      certificatesskillsalt4=""
+      certificatesskillsimg5=""
+      certificatesskillsalt5=""
+      certificatesskillsimg6=""
+      certificatesskillsalt6=""
+      certificatesskillsimg7=""
+      certificatesskillsalt7=""
+      certificatesskillsimg8=""
+      certificatesskillsalt8=""
+      certificatesskillsimg9=""
+      certificatesskillsalt9=""
+      certificatesskillsimg10=""
+      certificatesskillsalt10=""
+      certificatesskillsimg11=""
+      certificatesskillsalt11=""
+      certificatesskillsimg12=""
+      certificatesskillsalt12=""
+      certificatesskillsimg13=""
+      certificatesskillsalt13=""
+      certificatesskillsimg14=""
+      certificatesskillsalt14=""
+    ></app-certificates>
+  </section>
 </main>
