--- a/src/app/shared/components/section-title/section-title.component.sass
+++ b/src/app/shared/components/section-title/section-title.component.sass
@@ -1,10 +1,12 @@
+@import ../../../variables
+
 .title
   text-shadow: 5px 5px 30px rgba(0, 0, 0, 0.25)
   font-size: 33px
   font-style: normal
   font-weight: 600
   line-height: 65px
-  background: linear-gradient(180deg, #FF6D00 0%, #E64A19 100%)
+  background: $primary-linear-gradient
   background-clip: text
   -webkit-background-clip: text
   -webkit-text-fill-color: transparent
@@ -15,7 +17,7 @@
     font-style: normal
     font-weight: 600
     line-height: 65px
-    background: linear-gradient(90deg, #FFF 0%, #DCD7D6 100%)
+    background: $secondary-linear-gradient
     background-clip: text
     -webkit-background-clip: text
     -webkit-text-fill-color: transparent
