--- a/src/app/components/header/header.component.sass
+++ b/src/app/components/header/header.component.sass
@@ -1,22 +1,22 @@
+@import ../../variables
+
 .s-header
-    width: 100%
+    width: $element-width
     height: 624px
-    display: flex
-    justify-content: center
-    align-items: center
+    @include flexbox
     gap: 2rem
 
     h1
         display: flex
         flex-direction: column
-        color: #fff
+        color: $color-light
 
         :nth-child(1)
             font-size: 1rem
             font-weight: 400
         
         :nth-child(2)
-            background: linear-gradient(180deg, #FF6D00 0%, #E64A19 100%)
+            background: $primary-linear-gradient
             background-clip: text
             -webkit-background-clip: text
             -webkit-text-fill-color: transparent
