--- a/src/app/components/my-projects/my-projects.component.sass
+++ b/src/app/components/my-projects/my-projects.component.sass
@@ -1,18 +1,18 @@
+@import ../../variables
+
 .card-project 
   width: 25.125rem
   height: 21rem
-  border: 1px solid #e64a19
+  border: 1px solid $secondary-color
 
   .card-project-img
     width: 25rem
     height: 21rem
-    display: flex
-    align-items: center
-    justify-content: center
+    @include flexbox
 
     > img 
-      height: 100%
-      width: 100%
+      height: $element-height
+      width: $element-width
 
   .card-project-technology 
     display: flex
@@ -25,7 +25,7 @@
       background-clip: text
       -webkit-background-clip: text
       -webkit-text-fill-color: transparent
-      background-image: linear-gradient(45deg, #ff6d00, #e64a19)
+      background-image: $primary-linear-gradient
 
     .card-project-technology-icons 
       display: flex
@@ -48,7 +48,7 @@
         border-radius: 0.5rem
         z-index: 1
         opacity: 0
-        color: #e64a19
+        color: $secondary-color
         visibility: hidden
         transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out
         transform: translateX(-50%)
@@ -63,8 +63,8 @@
         height: 15.236rem
 
         .card-project-img
-            width: 100%
-            height: 100%
+            width: $element-width
+            height: $element-height
         .card-project-technology 
             margin-top: 0.5rem
             .card-project-icons-tool 
