--- a/src/app/components/navbar/navbar.component.sass
+++ b/src/app/components/navbar/navbar.component.sass
@@ -1,12 +1,14 @@
+@import ../../variables
+
 nav
-  width: 100%
+  width: $element-width
   height: 3rem
   display: flex
   align-items: center
   justify-content: space-evenly
 
   h2
-    color: #fff
+    color: $color-light
 
   .links
     display: flex
@@ -14,14 +16,14 @@ nav
 
     a
       text-decoration: none
-      color: #fff
+      color: $color-light
   
   .toggle_btn
     position: static
     display: none
     cursor: pointer
     font-size: 1.5rem
-    color: #fff
+    color: $color-light
 
   .social
     display: flex
@@ -30,13 +32,11 @@ nav
     a
       width: 2rem
       height: 2rem
-      display: flex
-      justify-content: center
-      align-items: center
+      @include flexbox
       font-size: 1.3rem
       text-decoration: none
       border-radius: 0.2rem
-      color: #fff
+      color: $color-light
       background: #a1300b96
 
       &:hover
@@ -54,12 +54,10 @@ nav
     transition: 600ms
 
     a
-      display: flex
-      justify-content: center
-      align-items: center
+      @include flexbox
       padding: 0.7rem
       text-decoration: none
-      color: #fff
+      color: $color-light
   
   .dropdown_menu.open
     height: 15rem
