Otimizando imagens, adicionando o componente footer, implementando componente de social media e deixando tudo responsivo.

--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,6 +1,6 @@
-<section class="s-about">
+<section class="s-about" id="nav-about">
   <div class="container-about">
-    <img src="assets/profile.png.png" alt="" />
+    <img src="assets/img-creator/profile.png.png" alt="website-creator" />
     <div class="right-about">
       <app-section-title
         numberPage="01."
@@ -50,23 +50,23 @@
       </div>
     </div>
   </div>
-  <div class="container-habilidades">
+  <div class="container-habilidades" id="nav-skills">
     <app-section-title
       numberPage="02."
       titlePage="Habilidades"
     ></app-section-title>
     <div class="img-skills">
-      <img src="assets/html.svg" alt="html5" />
-      <img src="assets/css.png" alt="css3" />
-      <img src="assets/javascript.svg" alt="javascript" />
-      <img src="assets/sass.svg" alt="sass" />
-      <img src="assets/tailwind.png" alt="talwind" />
-      <img src="assets/angular.svg" alt="angular" />
-      <img src="assets/typescript.svg" alt="typescript" />
-      <img src="assets/java.svg" alt="java" />
-      <img src="assets/github.svg" alt="github" />
-      <img src="assets/git.svg" alt="git" />
-      <img src="assets/figma.svg" alt="figma" />
+      <img src="assets/img-skills/html.svg" alt="html5" />
+      <img src="assets\img-skills\css.svg" alt="css3" />
+      <img src="assets/img-skills/javascript.svg" alt="javascript" />
+      <img src="assets/img-skills/sass.svg" alt="sass" />
+      <img src="assets/img-skills/tailwind.png" alt="talwind" />
+      <img src="assets/img-skills/angular.svg" alt="angular" />
+      <img src="assets/img-skills/typescript.svg" alt="typescript" />
+      <img src="assets/img-skills/java.svg" alt="java" />
+      <img src="assets/img-skills/github.svg" alt="github" />
+      <img src="assets/img-skills/git.svg" alt="git" />
+      <img src="assets/img-skills/figma.svg" alt="figma" />
     </div>
   </div>
 </section>
