--- a/src/app/components/my-projects/my-projects.component.html
+++ b/src/app/components/my-projects/my-projects.component.html
@@ -7,23 +7,23 @@
     <div class="card-project-technology-icons">
       <div class="card-project-icons-tool" data-name="HTML5">
         <img src="{{ imgskills1 }}" alt="{{ altskills1 }}" />
-        <span class="card-project-tooltip">HTML5</span>
+        <span class="card-project-tooltip">{{ technology1 }}</span>
       </div>
       <div class="card-project-icons-tool" data-name="HTML5">
         <img src="{{ imgskills2 }}" alt="{{ altskills2 }}" />
-        <span class="card-project-tooltip">HTML5</span>
+        <span class="card-project-tooltip">{{ technology2 }}</span>
       </div>
       <div class="card-project-icons-tool" data-name="HTML5">
         <img src="{{ imgskills3 }}" alt="{{ altskills3 }}" />
-        <span class="card-project-tooltip">HTML5</span>
+        <span class="card-project-tooltip">{{ technology3 }}</span>
       </div>
       <div class="card-project-icons-tool" data-name="HTML5">
         <img src="{{ imgskills4 }}" alt="{{ altskills4 }}" />
-        <span class="card-project-tooltip">HTML5</span>
+        <span class="card-project-tooltip">{{ technology4 }}</span>
       </div>
       <div class="card-project-icons-tool" data-name="HTML5">
         <img src="{{ imgskills5 }}" alt="{{ altskills5 }}" />
-        <span class="card-project-tooltip">HTML5</span>
+        <span class="card-project-tooltip">{{ technology5 }}</span>
       </div>
     </div>
   </div>
