--- a/src/app/variables.sass
+++ b/src/app/variables.sass
@@ -3,6 +3,7 @@ $secondary-color: #e64a19
 // $tertiary-color:
 $quaternary-color-with-opacity: #e64919c5
 $color-light: #fff7ec
+$color-light-with-opacity: #7d7f81
 $color-dark: #141414
 
 // $title-number-color:
