--- a/src/styles.sass
+++ b/src/styles.sass
@@ -9,4 +9,11 @@
 
 
 body
+  overflow-x: hidden
   background-color: #141414
+
+body::-webkit-scrollbar 
+  width: 6px
+
+body::-webkit-scrollbar-thumb
+  background-color: #e65100
