--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,15 @@
-<section class="s-header">
+<section
+  class="s-header"
+  id="nav-header"
+  style="background-image: url(assets\dddraw.svg)"
+>
   <h1>
     <span>Olá, me chamo</span>
     <span>Kelven Wyllames</span>
     <span>{{ typewriter }}</span>
   </h1>
-  <img src="assets/programmer-writing-code-on-laptop.png" alt="" />
+  <img
+    src="assets/img-header/programmer-writing-code-on-laptop.png"
+    alt="programmer-writing-code-on-laptop"
+  />
 </section>
