--- a/src/app/components/header/header.component.sass
+++ b/src/app/components/header/header.component.sass
@@ -9,6 +9,7 @@
     h1
         display: flex
         flex-direction: column
+        height: 150px
         color: $color-light
 
         :nth-child(1)
